섹션 5 : 템플릿
- WepApiExRateProvider 리팩터링
- ExRateProviderStub error "No beans" 확인 필요